Added more category theory stuff

--- a/tex/CatDef.tex
+++ b/tex/CatDef.tex
@@ -1,1 +1,1 @@
-$\operatorname{Obj}(\mathcal C)$
+$\DeclareMathOperator{\Obj}{Obj}\DeclareMathOperator{\Hom}{Hom}\DeclareMathOperator{\id}{id}\newcommand{\C}{\mathcal C}$
