--- a/tex/CatDef.tex
+++ b/tex/CatDef.tex
@@ -1,1 +1,1 @@
-$\DeclareMathOperator{\Obj}{Obj}\DeclareMathOperator{\Hom}{Hom}\DeclareMathOperator{\id}{id}\newcommand{\C}{\mathcal C}$
+$\DeclareMathOperator{\Obj}{Obj}\DeclareMathOperator{\Hom}{Hom}\DeclareMathOperator{\id}{id}\newcommand{\C}{\mathcal C}\newcommand{\D}{\mathcal D}\newcommand{\op}[1]{#1^{op}}$
